--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
           <h4>toolforge入门攻略<small class="publish-date">2020-10-25</small></h4>
           <p class="mb-0">我很早之前就从维基前辈那里听说过Toolforge了。大家都知道维基百科有很多机器人，还有很多小工具。可以说在当今的维基百科的正常运转，是非常依赖于这些自动化程序的……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/word-segmentation-in-lua.html">
+          <h4>Lua编写中文分词<small class="publish-date">2020-11-07</small></h4>
+          <p class="mb-0">中文分词是中文相关的自然语言处理（NLP）避不开的一个问题。成熟的分词工具有不少，Python语言的“结巴”分词就是一个有名的例子。但找遍网络，却很难找到一个用Lua编写的中文分词……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
