--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
           <h4>Lua编写中文分词<small class="publish-date">2020-11-07</small></h4>
           <p class="mb-0">中文分词是中文相关的自然语言处理（NLP）避不开的一个问题。成熟的分词工具有不少，Python语言的“结巴”分词就是一个有名的例子。但找遍网络，却很难找到一个用Lua编写的中文分词……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/free-chinese-fonts.html">
+          <h4>无忧中文字体<small class="publish-date">2020-12-05</small></h4>
+          <p class="mb-0">我非常想写一篇关于中文字体的文章，但我知道自己对字体的了解其实停留在表层。即便是这样，也非常热爱。在字体领域，我们一直落后西方很多。茫茫众生对于字体的选择往往局限于系统自带的那几种字体……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
