--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
           <h4>无忧中文字体<small class="publish-date">2020-12-05</small></h4>
           <p class="mb-0">我非常想写一篇关于中文字体的文章，但我知道自己对字体的了解其实停留在表层。即便是这样，也非常热爱。在字体领域，我们一直落后西方很多。茫茫众生对于字体的选择往往局限于系统自带的那几种字体……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/web-gis-starter.html">
+          <h4>Web GIS零基础入门<small class="publish-date">2020-12-20</small></h4>
+          <p class="mb-0">我基本上可以说是Web GIS零基础了。最近两个星期左右的时间，我努力学习这方面知识，终于有点点入门了。另外，最近我为公司设计图上呈现服务，主要就是关于Web GIS的，所以我也不得不恶补了两个星期的GIS相关的知识……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
