--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
           <h4>Web GIS零基础入门<small class="publish-date">2020-12-20</small></h4>
           <p class="mb-0">我基本上可以说是Web GIS零基础了。最近两个星期左右的时间，我努力学习这方面知识，终于有点点入门了。另外，最近我为公司设计图上呈现服务，主要就是关于Web GIS的，所以我也不得不恶补了两个星期的GIS相关的知识……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/chores-2.html">
+          <h4>一些杂事（二）<small class="publish-date">2021-03-14</small></h4>
+          <p class="mb-0">本文涉及MySQL从备份恢复的经验以及FastDFS文件服务器的坑……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
