--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
           <h4>一些杂事（二）<small class="publish-date">2021-03-14</small></h4>
           <p class="mb-0">本文涉及MySQL从备份恢复的经验以及FastDFS文件服务器的坑……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/batch-idcard-generate.html">
+          <h4>Lua日期库的运用 —— 批量生成测试身份证号<small class="publish-date">2021-03-21</small></h4>
+          <p class="mb-0">批量生成身份证号这件事，或许是我用Lua做的第一件对工作有帮助的事情了。网上有生成身份证号的程序，一般来说或许不需要去自己写一个生成身份证号的程序。生成大量身份证号，当然目的只有一个，就是用于测试……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
