--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
           <h4>Lua日期库的运用 —— 批量生成测试身份证号<small class="publish-date">2021-03-21</small></h4>
           <p class="mb-0">批量生成身份证号这件事，或许是我用Lua做的第一件对工作有帮助的事情了。网上有生成身份证号的程序，一般来说或许不需要去自己写一个生成身份证号的程序。生成大量身份证号，当然目的只有一个，就是用于测试……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/create-an-unofficial-mariadb-doc-in-one-day.html">
+          <h4>我如何用一天时间搭建非官方的MariaDB文档<small class="publish-date">2021-03-28</small></h4>
+          <p class="mb-0">当然你可能说，搭建一个非官方的文档网站完全不需要一天时间，只要反向代理一下就完成了。但我想说的不是这样……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
