--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
           <h4>我如何用一天时间搭建非官方的MariaDB文档<small class="publish-date">2021-03-28</small></h4>
           <p class="mb-0">当然你可能说，搭建一个非官方的文档网站完全不需要一天时间，只要反向代理一下就完成了。但我想说的不是这样……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/advices-on-spare-time-study.html">
+          <h4>我关于业余学习的建议<small class="publish-date">2021-04-17</small></h4>
+          <p class="mb-0">...我非常明白高强度的工作，会让大家没有时间学习其他的东西，所以我也不会想要跟大家说，你要忙了一天了，回家再学一晚上，像上学那样。我觉得我提倡的成年人的学习状态是这样的……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
