--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="jHgYjQzFBYmJrMPVbEQCtQbWct_1YtX0i9MhalE1Z8c" />
 
     <link rel="shortcut icon" href="./assets/img/favicon.ico">
     <link rel="apple-touch-icon" href="./assets/img/apple-touch-icon.png">
