--- a/index.html
+++ b/index.html
@@ -205,9 +205,13 @@
           <h4>我关于业余学习的建议<small class="publish-date">2021-04-17</small></h4>
           <p class="mb-0">...我非常明白高强度的工作，会让大家没有时间学习其他的东西，所以我也不会想要跟大家说，你要忙了一天了，回家再学一晚上，像上学那样。我觉得我提倡的成年人的学习状态是这样的……</p>
         </a>
-        <a class="list-group-item list-group-item-action" href="post/leaflet-map-visualization.html ">
+        <a class="list-group-item list-group-item-action" href="post/leaflet-map-visualization.html">
           <h4>Leaflet实现地图可视化<small class="publish-date">2021-05-19</small></h4>
           <p class="mb-0">地图可视化是展示包含经纬度数据的最好方式。为什么要可视化？因为大量的数据的空间信息以及地理关联性，通过可视化才能让人直观地了解这些数据……</p>
+        </a>
+        <a class="list-group-item list-group-item-action" href="post/baidu-map-no-koto.html">
+          <h4>百度地图那点事<small class="publish-date">2021-06-14</small></h4>
+          <p class="mb-0">本文主要探讨百度地图的坐标偏移以及地理编码相关。最近我尝试在Leaflet上展示百度地图，用于可视化演示。虽然有很多其他选择，但领导决定用百度地图了，前期也都利用百度地图去设计的，所以得用了……</p>
         </a>
       </div>
 
