--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-bootstrap">
-      <a data-toggle="tooltip" data-placement="bottom" class="navbar-brand mr-0 mr-md-2" title="&lt;b&gt;一个前端小白的博客&lt;/b&gt;&lt;br&gt;同时也是一个维基人的博客" class="navbar-brand" href="https://github.com/thednp/bootstrap.native/">
+      <a data-toggle="tooltip" data-placement="bottom" class="navbar-brand mr-0 mr-md-2" title="&lt;b&gt;一个前端小白的博客&lt;/b&gt;&lt;br&gt;同时也是一个维基人的博客" class="navbar-brand" href="https://alexandermisel.github.io/blog/">
         <svg class="d-inline-block align-top" width="36" height="36" viewBox="0 0 612 612" xmlns="http://www.w3.org/2000/svg" focusable="false"><title>1=0的博客</title>
           <path fill="currentColor" d="M510 8a94.3 94.3 0 0 1 94 94v408a94.3 94.3 0 0 1-94 94H102a94.3 94.3 0 0 1-94-94V102a94.3 94.3 0 0 1 94-94h408m0-8H102C45.9 0 0 45.9 0 102v408c0 56.1 45.9 102 102 102h408c56.1 0 102-45.9 102-102V102C612 45.9 566.1 0 510 0z"></path><path fill="currentColor" d="M196.77 471.5V154.43h124.15c54.27 0 91 31.64 91 79.1 0 33-24.17 63.72-54.71 69.21v1.76c43.07 5.49 70.75 35.82 70.75 78 0 55.81-40 89-107.45 89zm39.55-180.4h63.28c46.8 0 72.29-18.68 72.29-53 0-31.42-21.53-48.78-60-48.78h-75.57zm78.22 145.46c47.68 0 72.73-19.34 72.73-56s-25.93-55.37-76.46-55.37h-74.49v111.4z"></path>
         </svg>
@@ -34,16 +34,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto mr-0">
-          <li class="nav-item"><a class="nav-link" href="index.html">V3</a></li>
+          <li class="nav-item"><a class="nav-link" href="links.html">友站链接</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">分享</a>
             <ul class="dropdown-menu dropdown-menu-right">
               <a class="dropdown-item" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://alexandermisel.github.io/blog/" title="在Facebook上分享">Facebook</a>
               <a class="dropdown-item" target="_blank" 
-                  href="https://twitter.com/home?status=AlexanderMisel的博客 https://alexandermisel.github.io/blog/" 
+                  href="https://twitter.com/intent/tweet?text=AlexanderMisel的博客 https://alexandermisel.github.io/blog/" 
                   title="在Twitter上分享">Twitter</a>
-              
-              <a class="dropdown-item" target="_blank" href="https://plus.google.com/share?url=https://alexandermisel.github.io/blog/" title="在Google+上分享">Google+</a>
             </ul>
           </li>
         </ul>
