--- a/index.html
+++ b/index.html
@@ -219,6 +219,10 @@
           <h4>JS地理信息处理<small class="publish-date">2021-07-11</small></h4>
           <p class="mb-0">这篇文章会专注于用前端JS来处理地理数据。地理数据有什么可处理的呢？这应该是大有学问的。主要是关于计算机图形学的。不过我们没有必要深入学习太多这方面知识。我只是介绍一些我认为实用的东西……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/how-lpeg.re-convert-peg-to-lpeg-objects.html">
+          <h4>LPeg.re是如何把PEG转换成LPeg对象的<small class="publish-date">2021-09-20</small></h4>
+          <p class="mb-0">我们知道LPeg是Lua的PEG库，但是它因为要与Lua结合，所以使用的时候跟标准的PEG有区别。但它提供了一个LPeg.re库，可以将我们用文字编写的PEG文法转换成LPeg内部的对象，就仿佛我们使用LPeg原生的写法编写了一个解析器一样，非常神奇……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
