--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
           <h4>LPeg.re是如何把PEG转换成LPeg对象的<small class="publish-date">2021-09-20</small></h4>
           <p class="mb-0">我们知道LPeg是Lua的PEG库，但是它因为要与Lua结合，所以使用的时候跟标准的PEG有区别。但它提供了一个LPeg.re库，可以将我们用文字编写的PEG文法转换成LPeg内部的对象，就仿佛我们使用LPeg原生的写法编写了一个解析器一样，非常神奇……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/chinese-variant-conversion-with-wikipedia-data.html">
+          <h4>利用维基百科数据来进行中文简繁转换<small class="publish-date">2021-10-04</small></h4>
+          <p class="mb-0">繁体是一种历史悠久的汉字书写形式，至今港澳台等地区仍然广泛使用。由于大中华地区长期保持着文化交流，我们使用的现代汉语也没有出现太大的差别，这让机器完成简繁转换成为可能……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
