--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
           <h4>利用维基百科数据来进行中文简繁转换<small class="publish-date">2021-10-04</small></h4>
           <p class="mb-0">繁体是一种历史悠久的汉字书写形式，至今港澳台等地区仍然广泛使用。由于大中华地区长期保持着文化交流，我们使用的现代汉语也没有出现太大的差别，这让机器完成简繁转换成为可能……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/speed-up-mediawiki-importing-with-deno.html">
+          <h4>用Deno脚本加速MediaWiki导入<small class="publish-date">2021-10-16</small></h4>
+          <p class="mb-0">我们架设了一个Wiki网站，用维基百科一样的MediaWiki软件。MediaWiki提供多种方式导入其他wiki上的页面。其中一种是供网站开发者用的，使用维护脚本importDump.php在控制台导入XML dump……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
