--- a/index.html
+++ b/index.html
@@ -231,6 +231,10 @@
           <h4>用Deno脚本加速MediaWiki导入<small class="publish-date">2021-10-16</small></h4>
           <p class="mb-0">我们架设了一个Wiki网站，用维基百科一样的MediaWiki软件。MediaWiki提供多种方式导入其他wiki上的页面。其中一种是供网站开发者用的，使用维护脚本importDump.php在控制台导入XML dump……</p>
         </a>
+        <a class="list-group-item list-group-item-action" href="post/ace-editor-mode-in-depth.html">
+          <h4>深入了解Ace Editor的mode<small class="publish-date">2021-12-11</small></h4>
+          <p class="mb-0">Ace Editor是一款非常有名的基于Web的源代码编辑器，具有丰富的可扩展性，而且性能也很棒，处理上百万行代码不在话下。据我所知，维基百科、可汗学院、Overleaf、CodeCombat等知名网站都在使用这款编辑器。不过，它也有一个大问题就是文档写得非常简陋……</p>
+        </a>
       </div>
 
       <!-- FOOTER -->
