--- a/index.html
+++ b/index.html
@@ -236,8 +236,16 @@
           <p class="mb-0">Ace Editor是一款非常有名的基于Web的源代码编辑器，具有丰富的可扩展性，而且性能也很棒，处理上百万行代码不在话下。据我所知，维基百科、可汗学院、Overleaf、CodeCombat等知名网站都在使用这款编辑器。不过，它也有一个大问题就是文档写得非常简陋……</p>
         </a>
         <a class="list-group-item list-group-item-action" href="post/using-svg-filters.html">
-          <h4>SVG的filter使用经验<small class="publish-date">2022-6-11</small></h4>
+          <h4>SVG的filter使用经验<small class="publish-date">2022-06-11</small></h4>
           <p class="mb-0">早就知道SVG的filter可以实现很厉害的效果，但入门起来有点困难。一个重要的原因我觉得是，网上没找到很好的教程。连我最信任的MDN都没有把它讲明白……</p>
+        </a>
+        <a class="list-group-item list-group-item-action" href="post/markdown-dance-with-vue.html">
+          <h4>Markdown与Vue共舞<small class="publish-date">2023-09-02</small></h4>
+          <p class="mb-0">很久没有发博客了，但是这次因为觉得确实需要积累一下最近学到的知识，所以就有了这篇博客。标题很奇怪对不对？不过当你了解到我做的事情的时候，可能就没那么奇怪了。我最近做的这个工具是要在Markdown里面嵌入Vue的语法，并且实时预览的一个工具……</p>
+        </a>
+        <a class="list-group-item list-group-item-action" href="post/how-to-still-develop-frontend-in-win7.html">
+          <h4>如何继续使用 Win7 开发前端<small class="publish-date">2024-01-20</small></h4>
+          <p class="mb-0">Windows 7自2009年发布以来，一直是微软最受欢迎的操作系统之一。它以其用户友好的界面、稳定的性能和对硬件的良好兼容性而广受好评。在长达10年的支持周期中，Windows 7帮助了无数用户处理日常工作和娱乐需求，成为一个时代的象征……</p>
         </a>
       </div>
 
